--- a/TestProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TestProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -70,8 +70,11 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[MRU]
+MRUItem0=/Game/NewLevel
+
 [EditorStartup]
-LastLevel=/Game/StarterContent/Maps/Minimal_Default
+LastLevel=/Game/NewLevel
 
 [ModuleFileTracking]
 TestProject.TimeStamp=2020.07.09-06.18.08
@@ -79,4 +82,8 @@ TestProject.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+
+[ContentBrowser]
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
