--- a/TestProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TestProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,8 +77,8 @@ MRUItem0=/Game/NewLevel
 LastLevel=/Game/NewLevel
 
 [ModuleFileTracking]
-TestProject.TimeStamp=2020.07.09-06.18.08
-TestProject.LastCompileMethod=Unknown
+TestProject.TimeStamp=2020.07.09-06.38.59
+TestProject.LastCompileMethod=External
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -86,4 +86,10 @@ CleanShutdown=False
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+
+[MessageLog]
+LastLogListing=LoadErrors
+
+[ContentBrowserRecent]
+MRUItem0=/Game/NewLevel
 
