--- a/TestProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TestProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,8 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [MRU]
-MRUItem0=/Game/NewLevel
+MRUItem0=/Game/StarterContent/Maps/Minimal_Default
+MRUItem1=/Game/NewLevel
 
 [EditorStartup]
 LastLevel=/Game/StarterContent/Maps/Minimal_Default
@@ -900,7 +901,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=EditorErrors
 
 [ContentBrowserRecent]
 MRUItem0=/Game/NewBlueprint2
@@ -1399,6 +1400,46 @@ NewBlueprint2_C.Rendering=True
 NewBlueprint2_C.Collision=True
 NewBlueprint2_C.Actor=True
 NewBlueprint2_C.Input=True
+CharacterBP_C.TransformCommon=True
+CharacterBP_C.Animation=True
+CharacterBP_C.Mesh=True
+CharacterBP_C.Clothing=True
+CharacterBP_C.Physics=True
+CharacterBP_C.Collision=True
+CharacterBP_C.MasterPoseComponent=True
+CharacterBP_C.Lighting=True
+CharacterBP_C.ClothingSimulation=True
+CharacterBP_C.Rendering=True
+CharacterBP_C.SkinWeights=True
+CharacterBP_C.Navigation=True
+CharacterBP_C.VirtualTexture=True
+CharacterBP_C.Tags=True
+CharacterBP_C.Activation=True
+CharacterBP_C.Cooking=True
+CharacterBP_C.Character Movement (General Settings)=True
+CharacterBP_C.Character Movement: Walking=True
+CharacterBP_C.Character Movement: Jumping / Falling=True
+CharacterBP_C.Character Movement (Networking)=True
+CharacterBP_C.Character Movement: Swimming=True
+CharacterBP_C.Character Movement: Flying=True
+CharacterBP_C.Character Movement: Custom Movement=True
+CharacterBP_C.Character Movement (Rotation Settings)=True
+CharacterBP_C.Character Movement: Physics Interaction=True
+CharacterBP_C.Character Movement=True
+CharacterBP_C.Character Movement: Avoidance=True
+CharacterBP_C.RootMotion=True
+CharacterBP_C.Character Movement: NavMesh Movement=True
+CharacterBP_C.NavMovement=True
+CharacterBP_C.Velocity=True
+CharacterBP_C.PlanarMovement=True
+CharacterBP_C.MovementComponent=True
+CharacterBP_C.Shape=True
+CharacterBP_C.Character=True
+CharacterBP_C.Camera=True
+CharacterBP_C.Pawn=True
+CharacterBP_C.Replication=True
+CharacterBP_C.Input=True
+CharacterBP_C.Actor=True
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=IOSRuntimeSettings.Build.Remote Build Options,
@@ -1578,4 +1619,7 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
+
+[PlacementMode]
+RecentlyPlaced=/Game/CharacterBP.CharacterBP;
 
